# CSC2002S_Assign1_Rust_vs_Java

./: .gitignore  CSC2002S PCP1 Assignment.doc  README.md
java/: .~lock.CSC2002S PCP1 Assignment.doc#  Makefile
java/Data/: large_out.txt  small_in.txt  trivialbasin_in.txt
java/ForkJoinSum/: SumAll.java  SumArray.java
java/src/: Parallel.java  ProcessParallel.java  Sequential.java  SumAll.java  SumArray.java  Tuple.java
rust/: Cargo.toml
rust/Data/: large_out.txt  med_in.txt  med_out.txt  small_out.txt  trivialhill_in.txt
rust/src/: main.rs  par.rs  seq.rs  seq2d.rs
