[package]
name = "assignment1"
version = "0.1.0"
authors = ["Charles Schleich <schleich.cdaniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "seq"
path = "src/seq.rs"

[[bin]]
name = "seq2d"
path = "src/seq2d.rs"


[[bin]]
name = "par"
path = "src/par.rs"

[dependencies]
